--- a/praktikum/tugas5/latihan5b/css/tambah.css
+++ b/praktikum/tugas5/latihan5b/css/tambah.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Lobster;
+  src: url(sansation_light.woff);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +14,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: white;
+  color: #fff !important;
 }
 
 body::before {
@@ -20,23 +25,77 @@ body::before {
   height: 100vh;
   width: 100%;
   z-index: -1;
-  background-image: linear-gradient(115deg, rgba(163, 110, 222, 1), rgba(79, 224, 195, 1)), url(../assets/library.jpg);
+  background-image: linear-gradient(115deg, rgba(45, 200, 237, 0.8), rgba(84, 138, 240, 0.8)), url(../assets/library.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-ul li {
-  list-style: none;
+h1 {
+  font-family: lobster;
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 1.25rem;
+}
+
+input,
+button,
+select,
+textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+.btn {
+  padding: 0.75rem;
 }
 
 form {
-  border: 1px solid blue;
+  width: 37.5rem;
   margin: auto;
-  width: 500px;
-  height: 400px;
+  background: #232346;
+  padding: 2.5rem 1.375rem;
+  border-radius: 0.25rem;
 }
 
-.form-wrapper {
-  border: 1px solid red;
+label {
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+.form-group {
+  margin: 0 auto 1.25rem auto;
+  padding: 0.25rem;
+}
+
+.form-btn {
+  margin: 2rem 0;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 2.375rem;
+  padding: 0.375rem 0.75rem;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-control:focus {
+  border-color: #2dc8ed;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(248, 107, 100, 0.25);
+}
+
+.input-textarea {
+  min-height: 120px;
+  width: 100%;
+  padding: 0.625rem;
+  resize: vertical;
 }
