--- a/praktikum/tugas5/latihan5d/css/tambah.css
+++ b/praktikum/tugas5/latihan5d/css/tambah.css
@@ -103,7 +103,7 @@ label {
 }
 
 .input-textarea {
-  min-height: 120px;
+  min-height: 7.5rem;
   width: 100%;
   padding: 0.625rem;
   resize: vertical;
