--- a/praktikum/tugas5/latihan5e/css/index.css
+++ b/praktikum/tugas5/latihan5e/css/index.css
@@ -3,6 +3,27 @@ body {
   font-size: 18px;
 }
 
+.go-to-admin-page {
+  position: absolute;
+}
+
+/* search btn */
+.search .form-group {
+  margin: 1.375rem 0;
+  text-align: center;
+}
+
+.search .form-group .btn {
+  vertical-align: inherit;
+}
+
+.search .form-group .form-control {
+  display: inline-block !important;
+  width: 35% !important;
+  margin-right: 0.25;
+}
+
+/* table */
 .id-buku p,
 .judul-buku p {
   margin: 8px !important;
