--- a/praktikum/tugas5/latihan5e/css/admin.css
+++ b/praktikum/tugas5/latihan5e/css/admin.css
@@ -5,8 +5,14 @@ body {
   line-height: 1.5;
 }
 
+/* .wrapper-cta {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+} */
+
 .add {
-  margin: 1.375rem 0;
+  position: absolute;
 }
 
 .add a {
@@ -18,6 +24,22 @@ body {
   font-size: 22px;
 }
 
+.search .form-group {
+  margin: 1.375rem 0;
+  text-align: center;
+}
+
+.search .form-control .btn {
+  vertical-align: inherit !important;
+}
+
+.search .form-group .form-control {
+  display: inline-block !important;
+  width: 35% !important;
+  margin-right: 0.25;
+}
+
+/* Table */
 .table th,
 .table td {
   vertical-align: middle;
