--- a/praktikum/tugas6/latihan6a/css/login.css
+++ b/praktikum/tugas6/latihan6a/css/login.css
@@ -3,24 +3,69 @@
   src: url(../assets/fonts/Quicksand/Quicksand-VariableFont_wght.ttf);
 }
 
-body {
+@font-face {
+  font-family: 'Playfair Display';
+  src: url(../assets/fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
+}
+
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  max-height: 56.25rem;
   font-family: Quicksand;
   font-size: 1rem;
   line-height: 1.5;
 }
 
-.wrapper::before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  z-index: -1;
-  background-image: linear-gradient(115deg, rgba(45, 200, 237, 0.8), rgba(84, 138, 240, 0.8)), url(../assets/library.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+.wrapper {
+  padding: 0 40px;
 }
+
+h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.row {
+  margin: 1.875rem 0;
+}
+
+.title-welcome {
+  margin: 0;
+  padding: 2.25rem 0;
+  font-family: 'Playfair Display';
+  color: #fff !important;
+}
+
+.img-svg {
+  /* margin: auto; */
+  margin: 0 auto 2.75rem auto;
+  background: url(../assets/svg/Login_vector.svg);
+  width: 25rem;
+  height: 25rem;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.left-col {
+  border: 2px solid red;
+  background: #006bff;
+  border-radius: 0 1.875rem 1.875rem 0;
+}
+
+.right-col {
+  border: 2px solid blue;
+}
+
+/* form {
+  border: 2px solid green;
+  margin: auto;
+  padding: 80px;
+  /* width: 28.75rem; */
+} */
